# OCR_TTA

./: README.md  api.py  dataset.py  eval_model.py  final_charlist_1770.txt  model.py  pyproject.toml  run_eval.sh  run_sh.sh  test.py  train9_onnx.py  train9_onnx_ft.py
modules/: feature_extraction.py
saved_models/: log_dataset.txt
saved_models/TPS-ResNet-BiLSTM-Attn-Seed1111/: log_train.txt  opt.txt
